creazione del front-end e fix in back-end
